<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    android:orientation="vertical">
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/tv_uploading"/>
    <ImageView
        android:id="@+id/iv_myselect"
        android:layout_width="match_parent"
        android:layout_height="150dp"/>

    <Button
        android:id="@+id/btn_image_pick"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/btn_image_pick"
        android:background="@drawable/btn_bg_img_pick"/>
    <Button
        android:id="@+id/btn_start_uploading"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/btn_go_upload"
        android:text="@string/btn_start_uploading"/>

</LinearLayout>
