<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:background="@drawable/em_icon_wenhao"
            android:gravity="center" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/cashout" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/myfragmentsolid"
        android:background="@color/colormysolid" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:layout_alignParentTop="true"
                        android:gravity="center"
                        android:text="@string/remaincash" />

                    <TextView
                        android:id="@+id/tv_cashout"
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:layout_alignParentBottom="true"
                        android:gravity="center"
                        android:text="0.0089" />
                </RelativeLayout>

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:text="@string/pre_getcash">

                </TextView>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/myfragmentsolid"
                android:background="@color/colormysolid" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@color/color_getcash"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/tip_getcash" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/remaincash_title" />

                    <EditText
                        android:id="@+id/et_cashout_value"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:hint="@string/hint_getcash" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_cashout_confirm"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:text="@string/btn_getcash"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:background="@drawable/code_bg_commit_btn_config"
                    android:textAlignment="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/myfragmentsolid"
                android:layout_marginTop="15dp"
                android:background="@color/colormysolid" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tipdetail_getcash"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
