<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <include layout="@layout/title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register_phone"
            android:textSize="20sp" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorLoginTitle"
            android:gravity="center"
            android:text="@string/login_title"
            android:textColor="@color/color_login_center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/cm_bg_edittext_config"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/ic_my"
                android:gravity="center"
                android:text="name" />

            <EditText
                android:id="@+id/et_userName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="7dp"
                android:background="@drawable/cm_bg_edittext_config"
                android:gravity="center"
                android:text="jielun"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/cm_bg_edittext_config"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/ic_my"
                android:gravity="center"
                android:text="name" />

            <EditText
                android:id="@+id/et_psd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="7dp"
                android:background="@drawable/cm_bg_edittext_config"
                android:gravity="center"
                android:text="123456"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/cm_bg_edittext_config"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/ic_my"
                android:gravity="center"
                android:text="name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="7dp"
                android:background="@drawable/cm_bg_edittext_config"
                android:gravity="center"
                android:text="123456"
                android:textSize="18sp" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/tv_register_gologin" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <TextView
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:text="@string/tv_register_agree" />
            <TextView
                android:layout_width="190dp"
                android:layout_height="30dp"
                android:text="@string/tv_register_profile" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/register_commit" />
        </LinearLayout>


    </LinearLayout>

