<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <include layout="@layout/title"/>
    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login" />

    </RelativeLayout>


    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_horizontal"
            android:text="@string/login_title"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/cm_bg_edittext_config"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/ic_launcher_background"
                android:text="name"/>
            <EditText
                android:id="@+id/et_nickname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="7dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/cm_bg_edittext_config"
                android:hint="18337133053"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/cm_bg_edittext_config"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/ic_launcher_background"
                android:text="name"/>
            <EditText
                android:id="@+id/et_nickname3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="7dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/cm_bg_edittext_config"
                android:hint="18337133053"
                android:textSize="18sp" />
        </LinearLayout>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/login_btn"/>
    </LinearLayout>

</LinearLayout>